src/main/webapp/imcms/css/admin/imcms-super-admin.css
/* ... */
.title-profile-row__name {
    width: 45%;
}

.title-profile-row__doc-name {
    width: 45%;
}

.profiles-table {
    width: 45%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-block;
}

.table-links,
.table-import-documents{
    width: 100%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    word-break: break-word;
}

.table-import-documents {
	overflow: auto;
	height: 510px;
    margin: 0 5px 0 5px;
}

.link-title-row.link-title,
.basic-import-document-titles{
    display: flex;
    font-weight: 600;
    margin-bottom: 5px;
    padding: 5px;
    text-align: center;
}

.link-info-row,
.basic-import-document-info-row{
    display: flex;
    margin-bottom: 5px;
    padding: 5px;
    text-align: center;
}

.link-params-block.imcms-form__field {
    display: inline-flex;
}

.imcms-number.link-params-block__links-field-end,
.imcms-number.link-params-block__links-field-start,
.imcms-number.link-params-block__button-validation{
    padding-right: 10px;
}

.link-params-block__loading-animation {
    margin-top: 30px;
    margin-right: 15px;
    min-width: 40px;
}

.basic-import-document-info-row__metaId{
	width: 20%;
}

.basic-import-document-info-row__id{
	width: 30%;
}

.basic-import-document-info-row__status {
	width: 50%;
}

.basic-import-document-titles__id{
	width: 30%;
}
.basic-import-document-titles__metaId{
	width: 20%;
}
.basic-import-document-titles__status{
	width: 50%;
}

.link-title-row__page-alias,
.link-info-row__link-page-alias {
    width: 10%;
}
.link-title-row__status,
.link-title-row__admin{
    width: 10%;
}

.link-title-row__status,
.link-info-row__link-status{
    width: 10%;
}

.link-title-row__type,
.link-info-row__link-type {
    width: 10%;
}

.link-title-row__admin,
.link-info-row__link-admin {
    width: 14%;
}

.link-title-row__link,
.link-info-row__link-name {
    width: 30%;
}

.link-params-block__button-validation {
    align-self: flex-end;
}

.imcms-checkbox {
    margin-top: 10px;
}

.link-title-row__host-found,
.imcms-control.imcms-control--remove.link-info-row__link-host-found,
.imcms-control.imcms-control--check.link-info-row__link-host-found {
    width: 8%;
}

.link-title-row__host-reachable,
.imcms-control.imcms-control--remove.link-info-row__link-host-reachable,
.imcms-control.imcms-control--check.link-info-row__link-host-reachable {
    width: 10%;
}

.link-title-row__page-found,
.imcms-control.imcms-control--remove.link-info-row__link-page-found,
.imcms-control.imcms-control--check.link-info-row__link-page-found {
    width: 8%;
}

.imcms-control.imcms-control--check.link-info-row__link-host-found,
.imcms-control.imcms-control--check.link-info-row__link-host-reachable,
.imcms-control.imcms-control--check.link-info-row__link-page-found {
    background-image: url("/imcms/images/controls/icon_folder_controll_check_hover.svg");
}

.imcms-control.imcms-control--remove.link-info-row__link-host-reachable,
.imcms-control.imcms-control--remove.link-info-row__link-page-found,
.imcms-control.imcms-control--remove.link-info-row__link-host-found {
    background-image: url("/imcms/images/controls/icon_folder_controll_remove_hover.png");
}

.category-type-editor,
.category-editor {
    width: 50%;
}

.category-type-editor{
    margin-right: 30px;
}

.category-admin {
    display: flex;
    justify-content: space-between;
}

@media screen and (max-width: 1000px){
    .category-admin {
        display: block;
    }

    .category-type-editor,
    .category-editor {
        width: 75%;
    }
}

@media screen and (max-width: 900px){
    .category-type-editor,
    .category-editor {
        width: 85%;
    }
}

@media screen and (max-width: 850px){
    .category-type-editor,
    .category-editor {
        width: 90%;
    }
}

@media screen and (max-width: 750px){
    .category-type-editor,
    .category-editor {
        width: 100%;
    }
}

.categories,
.category-type {
    display: flex;
    width: 100%;
}

.category-type__type-drop-list {
    width: 65%;
    min-width: 200px;
}

.categories__select-categories {
    width: 65%;
}

.categories__category-create-button {
    margin-top: 32px;
    margin-left: 15px;
}

.category-type__type-create-button {
    margin-top: auto;
    margin-bottom: 10px;
    margin-left: 15px;
}

.category-create-block__row-description {
    width: 65%;
}

.type-create-block__field-name {
    width: 65%;
}

.type-create-block__ctg-type-edit-button,
.category-create-block__edit-buttons{
    width: 90%;
}

.category-create-block__row-name {
    width: 65%;
}

.category-selection-block {
    flex-basis: 50%;
}

.types-editor-block {
    flex-basis: 50%;
}

.categories-block__select-categories {
    width: 55%;
}

.profile-info-row {
    padding: 5px;
    cursor: pointer;
    display: flex;
    text-align: center;
}

.profile-info-row:hover {
    background-color: #dfedff;
}

.profile-info-row.profiles-table__profile-row--active {
    background-color: #c3d9f5;
}

.profile-info-row__profile-name {
    width: 45%;
}

.profile-info-row__profile-doc-name {
    width: 45%;
}

.imcms-control.imcms-control--remove.profile-info-row__delete {
    width: 10%;
}

.profiles-editor {
    width: 40%;
    margin-left: 10%;
    vertical-align: top;
}

.profiles-editor__profile-name-row {
    margin-bottom: 20px;
}

.imcms-buttons.profiles-editor__profile-button-edit {
    padding: 10px;
    display: flex;
    place-content: center
}

.imcms-settings-row {
    margin-top: 25px;
    width: 400px;
}

.imcms-settings-row:first-child{
    margin-top: 10px;
}

.imcms-settings-row > .imcms-buttons {
    float: right;
    margin-top: 10px;
}

.page-number > * {
    display: inline-block;
}

.page-number > .imcms-buttons {
    margin-top: 20px;
}

.system-message__settings-input > .imcms-text-area__input {
    height: 110px;
    width: 100%;
}

.server-master > .imcms-text-box > *,
.web-master > .imcms-text-box > * {
    display: inline-block;
    width: 60%;
}
/* ... */

